<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gov.nasa.jpl.iondtnsimpleandroidapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/button_label_sendingto"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/editTextDestEid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/button_label_destination_eid"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_label_send" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"
            android:text="@string/button_label_receivingat"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/editTextSinkId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editText_label_sink_identifier"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/buttonSubUnsub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_label_open" />

        <TextView
            android:id="@+id/textViewReceive"
            android:layout_width="373dp"
            android:layout_height="208dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
            android:text="@string/received_field_initial_value" />

    </LinearLayout>

</LinearLayout>